MODUL-225 - add disabled prop to new components

--- a/src/components/menu-item-add/menu-item-add.html
+++ b/src/components/menu-item-add/menu-item-add.html
@@ -1,3 +1,3 @@
-<m-menu-item icon-name="m-svg__add" @click="onClick">
+<m-menu-item icon-name="m-svg__add" :disabled="disabled" @click="onClick">
     {{ 'm-menu:add' | f-m-i18n }}
 </m-menu-item>
