--- a/src/components/menu/menu.sandbox.html
+++ b/src/components/menu/menu.sandbox.html
@@ -11,7 +11,7 @@
         <m-menu-item-add></m-menu-item-add>
         <m-menu-item-edit></m-menu-item-edit>
         <m-menu-item-archive></m-menu-item-archive>
-        <m-menu-item-delete></m-menu-item-delete>
+        <m-menu-item-delete :disabled="true"></m-menu-item-delete>
     </m-menu>
     <m-menu>
         <m-menu-item>Test 1</m-menu-item>
