--- a/src/components/menu-item-archive/menu-item-archive.html
+++ b/src/components/menu-item-archive/menu-item-archive.html
@@ -1,3 +1,3 @@
-<m-menu-item icon-name="m-svg__archive" @click="onClick">
+<m-menu-item icon-name="m-svg__archive" :disabled="disabled" @click="onClick">
     {{ 'm-menu:archive' | f-m-i18n }}
 </m-menu-item>
