--- a/src/components/menu-item-delete/menu-item-delete.html
+++ b/src/components/menu-item-delete/menu-item-delete.html
@@ -1,3 +1,3 @@
-<m-menu-item icon-name="m-svg__delete" @click="onClick">
+<m-menu-item icon-name="m-svg__delete" :disabled="disabled" @click="onClick">
     {{ 'm-menu:delete' | f-m-i18n }}
 </m-menu-item>
