--- a/src/components/tree-node/tree-node.html
+++ b/src/components/tree-node/tree-node.html
@@ -1,13 +1,13 @@
 <li class="m-tree">
     <div v-if="canHaveChildren" class="m-tree__with-children" :class="{'m--is-disabled': hasNoChild}">
-        <div class="m-tree__with-children__header" @click="toggleChildren()">
+        <div class="m-tree__with-children__header" @click="toggleChildrenVisibility()">
             <span class="m-tree__with-children__header__icon" :class="{ 'm--is-closed': isOpen}"></span>
-            <m-file-tree v-if="isFileTree" :file="node.content" :isOpen="isOpen"></m-file-tree>
+            <m-file-tree v-if="isFileTree" :file="node.content" :is-open="isOpen"></m-file-tree>
             <span>{{ nodeTitle }}</span>
         </div>
         <transition name="m-tree__with-children__body">
             <ul v-show="isOpen" class="m-tree__with-children__body">
-                <m-tree-node v-for="childrensNode in node.children" class="m-tree__with-children__children" :isFileTree="isFileTree" :selectionNumber="selectionNumber" :selectionIcon="selectionIcon" :node="childrensNode" :externalSelectedNode="externalSelectedNode" :isAllOpen="isAllOpen" @selectNewNode="newNodeSelectected"></m-tree-node>
+                <m-tree-node v-for="childrensNode in node.children" class="m-tree__with-children__children" :is-file-tree="isFileTree" :selection-number="selectionNumber" :selection-icon="selectionIcon" :node="childrensNode" :external-selected-node="externalSelectedNode" :is-all-open="isAllOpen" @newNodeSelectected="selectNewNode"></m-tree-node>
             </ul>
         </transition>
     </div>
