--- a/src/components/tree-node/tree-node.html
+++ b/src/components/tree-node/tree-node.html
@@ -1,5 +1,5 @@
 <li class="m-tree">
-    <div v-if="canHaveChildren" class="m-tree__with-children" :class="{'m--is-disabled': hasNoChild}">
+    <div v-if="hasValidChildren" class="m-tree__with-children" :class="{'m--is-disabled': hasNoChild}">
         <div class="m-tree__with-children__header" @click="toggleChildrenVisibility()">
             <span class="m-tree__with-children__header__icon" :class="{ 'm--is-closed': isOpen}"></span>
             <m-file-tree v-if="isFileTree" :file="node.content" :is-open="isOpen"></m-file-tree>
