--- a/src/components/tree-node/tree-node.html
+++ b/src/components/tree-node/tree-node.html
@@ -1,5 +1,5 @@
 <li class="m-tree">
-    <div v-if="hasValidChildren" class="m-tree__with-children" :class="{'m--is-disabled': hasNoChild}">
+    <div v-if="hasValidChildren" class="m-tree__with-children">
         <div class="m-tree__with-children__header" @click="toggleChildrenVisibility()">
             <span class="m-tree__with-children__header__icon" :class="{ 'm--is-closed': isOpen}"></span>
             <m-file-tree v-if="isFileTree" :file="node.content" :is-open="isOpen"></m-file-tree>
@@ -7,7 +7,10 @@
         </div>
         <transition name="m-tree__with-children__body">
             <ul v-show="isOpen" class="m-tree__with-children__body">
-                <m-tree-node v-for="childrensNode in node.children" class="m-tree__with-children__children" :is-file-tree="isFileTree" :selection-number="selectionNumber" :selection-icon="selectionIcon" :node="childrensNode" :external-selected-node="externalSelectedNode" :is-all-open="isAllOpen" @newNodeSelectected="selectNewNode" @generateErrorTree="generateErrorTree"></m-tree-node>
+                <template v-if="childrenNotEmpty">
+                    <m-tree-node v-for="childrensNode in node.children" class="m-tree__with-children__children" :is-file-tree="isFileTree" :selection-number="selectionNumber" :selection-icon="selectionIcon" :node="childrensNode" :external-selected-node="externalSelectedNode" :is-all-open="isAllOpen" @newNodeSelectected="selectNewNode" @generateErrorTree="generateErrorTree"></m-tree-node>
+                </template>
+                <li v-else class="m-tree__with-children__no-children"><m-i18n k="m-tree-node:empty"></m-i18n></li>
             </ul>
         </transition>
     </div>
