small refactor in vue-froala.ts link add / edit won't close when clicking to focus associated inputs

--- a/src/components/rich-text-edit/adapter/vue-froala.html
+++ b/src/components/rich-text-edit/adapter/vue-froala.html
@@ -1,4 +1,5 @@
 <div class="vue-froala"
+    @click.stop
     :class="{
         'vue-froala--focused': isFocused,
         'vue-froala--collapsed': isInitialized && !isFocused && isEmpty
