--- a/src/components/tree-node/tree-node.html
+++ b/src/components/tree-node/tree-node.html
@@ -1,5 +1,5 @@
 <li class="m-tree">
-    <div v-if="hasValidChildren" class="m-tree__with-children">
+    <div v-if="hasValidChildren()" class="m-tree__with-children">
         <div class="m-tree__with-children__header" @click="toggleChildrenVisibility()">
             <span class="m-tree__with-children__header__icon" :class="{ 'm--is-closed': isOpen}"></span>
             <m-file-tree v-if="isFileTree" :file="node.content" :is-open="isOpen"></m-file-tree>
@@ -8,15 +8,15 @@
         <transition name="m-tree__with-children__body">
             <ul v-show="isOpen" class="m-tree__with-children__body">
                 <template v-if="childrenNotEmpty">
-                    <m-tree-node v-for="childrensNode in node.children" class="m-tree__with-children__children" :is-file-tree="isFileTree" :selection-number="selectionNumber" :selection-icon="selectionIcon" :node="childrensNode" :external-selected-node="externalSelectedNode" :is-all-open="isAllOpen" @newNodeSelectected="selectNewNode" @generateErrorTree="generateErrorTree"></m-tree-node>
+                    <m-tree-node v-for="childrensNode in node.children" class="m-tree__with-children__children" :external-current-path="currentPath" :is-file-tree="isFileTree" :selection-number="selectionNumber" :selection-icon="selectionIcon" :node="childrensNode" :external-selected-node="externalSelectedNode" :is-all-open="isAllOpen" @newNodeSelectected="selectNewNode" @generateErrorTree="generateErrorTree" @openTheParent="openMe()"></m-tree-node>
                 </template>
                 <li v-else class="m-tree__with-children__no-children"><m-i18n k="m-tree-node:empty"></m-i18n></li>
             </ul>
         </transition>
     </div>
     <template v-else-if="validNode()" >
-            <m-link :mode="linkMode" class="m-tree__single-node" @click="selectNewNode(node)" :disabled="isInactiveButton">
-                <m-file-tree v-if="isFileTree" :file="node.content"></m-file-tree>
+            <m-link :mode="linkMode" class="m-tree__single-node" @click="selectNewNode(currentPath)" :disabled="isInactiveButton">
+                <m-file-tree v-if="isFileTree" :file="node.content" :is-a-folder="hasChildren"></m-file-tree>
                 <span>{{ nodeTitle }}</span>
             </m-link>
             <m-icon v-if="isNodeSelected()" :name="selectionIcon"></m-icon>
