--- a/src/components/error-technical-difficulty/error-technical-difficulty.sandbox.html
+++ b/src/components/error-technical-difficulty/error-technical-difficulty.sandbox.html
@@ -55,7 +55,7 @@
 
     <br />
 
-    <h5>Show stack trace with stack in error</h5>
+    <h5>With stack trace</h5>
     <div style="border: solid 1px black; padding: 10px; width: 600px;">
         <m-error-technical-difficulty :showStackTrace="true" :error="errorWithStack"></m-error-technical-difficulty>
     </div>
