refactor predefined menus using inheritance; code formatting

--- a/src/components/menu/menu.sandbox.html
+++ b/src/components/menu/menu.sandbox.html
@@ -8,7 +8,7 @@
         -->
     </p>
     <m-menu>
-        <m-menu-item-add></m-menu-item-add>
+    <m-menu-item-add @click="doAdd"></m-menu-item-add>
         <m-menu-item-edit></m-menu-item-edit>
         <m-menu-item-archive></m-menu-item-archive>
         <m-menu-item-delete :disabled="true"></m-menu-item-delete>
