--- a/src/components/input-style/input-style.scss
+++ b/src/components/input-style/input-style.scss
@@ -57,7 +57,7 @@ $m-input-style--padding: 4px !default;
         }
     }
 
-    &.m--is-focus:not(.m--has-error) {
+    &.m--is-focus:not(.m--has-error):not(.m--is-valid) {
         .m-input-style__label,
         .m-icon-button.m-icon-button,
         .m-icon.m-icon {
@@ -214,6 +214,7 @@ $m-input-style--padding: 4px !default;
         font-weight: $m-font-weight;
         color: $m-color--grey-darker;
         cursor: pointer;
+        background-color: #fff;
 
         .m-icon {
             font-size: 85%;
@@ -228,14 +229,19 @@ $m-input-style--padding: 4px !default;
 
     &__body {
         position: relative;
-        z-index: 2;
+        z-index: 3;
         display: flex;
         align-items: center;
         flex: 1 1 auto;
         width: 100%;
         font-weight: $m-font-weight;
         text-decoration: none;
-        padding: 0 0 $m-input-style--padding 0;
+        padding-bottom: $m-input-style--padding;
+        background-color: $m-color--white;
+
+        .m--is-focus & {
+            padding-bottom: $m-input-style--padding / 2;
+        }
 
         &,
         div,
@@ -244,10 +250,40 @@ $m-input-style--padding: 4px !default;
         }
 
         &__left {
+            // overflow: hidden;
             position: relative;
-            overflow: hidden;
             min-height: 24px;
             flex: 1 1 auto;
+
+            .m--is-focus & {
+                padding-top: 4px;
+                margin-top: 4px;
+            }
+
+            &::before,
+            &::after {
+                top: 0;
+                content: "";
+                position: absolute;
+                display: block;
+                transition: background-color 0.45s ease-in-out, width 0.45s ease-in-out, height 0.45s ease-in-out;
+            }
+
+            &::before {
+                width: 100%;
+                height: 2px;
+                background-color: $m-color--interactive;
+            }
+
+            &::after {
+                width: 0;
+                height: 4px;
+
+                .m--is-focus & {
+                    width: 100%;
+                    background-color: $m-color--interactive;
+                }
+            }
         }
 
         &__right {
@@ -302,8 +338,8 @@ $m-input-style--padding: 4px !default;
         font-size: $m-font-size;
         font-weight: $m-font-weight--bold;
         text-align: left;
-        border: none;
         background: none;
+        border: none;
         color: $m-color--text;
     }
 
