--- a/src/components/rich-text-edit/adapter/vue-froala.scss
+++ b/src/components/rich-text-edit/adapter/vue-froala.scss
@@ -1,7 +1,7 @@
 @import 'abstracts/variables';
 
 .vue-froala {
-    margin-top: 5px;
+    // margin-top: 5px;
 
     /deep/ .fr-box.fr-basic.fr-top .fr-wrapper {
         box-shadow: unset;
@@ -13,18 +13,15 @@
 
     /deep/ .fr-toolbar {
         opacity: 0;
-        border-top: unset;
-        transition: margin-top $m-transition-duration--l ease, opacity $m-transition-duration--l ease;
+        transition: margin-top $m-transition-duration--l ease, opacity 0.3s ease;
         display: block !important;
-
-        &::before {
-            content: "";
-            width: 0;
-            height: 4px;
-            display: block;
-            background-color: $m-color--grey;
-            transition: background-color $m-transition-duration--l ease-in-out, width $m-transition-duration--l ease-in-out;
-        }
+        position: relative;
+        box-shadow: unset;
+        // border-top: 0;
+        border-left: 1px solid $m-color--grey-light;
+        border-right: 1px solid $m-color--grey-light;
+        border-top: 1px solid $m-color--grey-light;
+        border-bottom: 1px solid $m-color--grey-light;
     }
 
     /deep/ .fr-box.fr-basic .fr-element {
@@ -32,6 +29,8 @@
         padding: 0;
         min-height: unset;
         font-weight: $m-font-weight;
+        border-left: 1px solid $m-color--grey-light;
+        border-right: 1px solid $m-color--grey-light;
     }
 
     &--collapsed {
@@ -68,10 +67,8 @@
             padding: 0;
             opacity: 1;
 
-            &::before {
-                width: 100%;
-                background-color: $m-color--interactive;
-
+            &::before,
+            &::after {
                 .m--has-error & {
                     background-color: $m-color--error;
                 }
