--- a/src/components/rich-text-edit/rich-text-edit.html
+++ b/src/components/rich-text-edit/rich-text-edit.html
@@ -16,6 +16,7 @@
                    :label-for="id"
                    :focus="isFocus"
                    :empty="isEmpty"
+                   :border-top="true"
                    :icon-name="iconName"
                    :required-marker="requiredMarker"
                    :tag-style="tagStyle">
