--- a/src/components/rich-text-edit/adapter/vue-froala.scss
+++ b/src/components/rich-text-edit/adapter/vue-froala.scss
@@ -24,12 +24,12 @@
     }
 
     /deep/ .fr-box.fr-basic .fr-element {
-        transition: padding $m-transition-duration--l ease;
+        transition: padding $m-transition-duration--l ease, border-color $m-transition-duration--l ease-in-out;
         padding: 0;
         min-height: unset;
         font-weight: $m-font-weight;
-        border-left: 1px solid $m-color--grey-light;
-        border-right: 1px solid $m-color--grey-light;
+        border-left: 1px solid transparent;
+        border-right: 1px solid transparent;
     }
 
     &--animated {
@@ -61,6 +61,8 @@
 
         /deep/ .fr-box.fr-basic .fr-element {
             padding: $m-spacing;
+            border-left-color: $m-color--grey-light;
+            border-right-color: $m-color--grey-light;
         }
 
         /deep/ .fr-wrapper {
