--- a/src/components/tree-node/tree-node.html
+++ b/src/components/tree-node/tree-node.html
@@ -2,7 +2,7 @@
     <div v-if="hasValidChildren()" class="m-tree__with-children">
         <div class="m-tree__with-children__header" @click="toggleChildrenVisibility()">
             <span class="m-tree__with-children__header__icon" :class="{ 'm--is-closed': isOpen}"></span>
-            <m-file-tree v-if="isFileTree" :file="node.content" :is-open="isOpen"></m-file-tree>
+            <m-file-tree v-if="isFileTree" :file="node.content" :is-open="isOpen" :is-a-folder="true"></m-file-tree>
             <span>{{ nodeTitle }}</span>
         </div>
         <transition name="m-tree__with-children__body">
@@ -10,13 +10,13 @@
                 <template v-if="childrenNotEmpty">
                     <m-tree-node v-for="childrensNode in node.children" class="m-tree__with-children__children" :external-current-path="currentPath" :is-file-tree="isFileTree" :selection-number="selectionNumber" :selection-icon="selectionIcon" :node="childrensNode" :external-selected-node="externalSelectedNode" :is-all-open="isAllOpen" @newNodeSelectected="selectNewNode" @generateErrorTree="generateErrorTree" @selectedNodeFound="selectedNodeFound"></m-tree-node>
                 </template>
-                <li v-else class="m-tree__with-children__no-children"><m-i18n k="m-tree-node:empty"></m-i18n></li>
+                <li v-else class="m-tree__with-children__no-children" ref="empty-node-txt">{{ emptyNodeTxt }}</li>
             </ul>
         </transition>
     </div>
     <template v-else-if="validNode()" >
             <m-link :mode="typeLink" class="m-tree__single-node" @click="selectNewNode(currentPath)" :disabled="isInactiveButton">
-                <m-file-tree v-if="isFileTree" :file="node.content" :is-a-folder="hasChildren"></m-file-tree>
+                <m-file-tree v-if="isFileTree" :file="node.content"></m-file-tree>
                 <span>{{ nodeTitle }}</span>
             </m-link>
             <m-icon v-if="isNodeSelected()" :name="selectionIcon"></m-icon>
