--- a/src/components/tree/tree.html
+++ b/src/components/tree/tree.html
@@ -1,10 +1,10 @@
 <div class="m-tree">
-    <span v-if="isTreeEmpty()">{{ emptyTreeTxt }}</span>
+    <span v-if="isTreeEmpty()" class="m-tree__empty" ref="empty-tree-txt">{{ emptyTreeTxt }}</span>
     <ul v-else>
-        <m-tree-node v-for="node in tree" :selection-number="selectionNumber" :node="node" :external-selected-node="selectedNode" :is-all-open="isAllOpen" :selection-icon="selectionIcon" :is-file-tree="isFileTree" @newNodeSelectected="selectNewNode" @generateErrorTree="generateErrorTree" @selectedNodeFound="selectedNodeFound"></m-tree-node>
+        <m-tree-node v-for="node in tree" ref="tree-node" :selection-number="selectionNumber" :node="node" :external-selected-node="selectedNode" :is-all-open="isAllOpen" :selection-icon="selectionIcon" :is-file-tree="isFileTree" @newNodeSelectected="selectNewNode" @generateErrorTree="generateErrorTree" @selectedNodeFound="selectedNodeFound"></m-tree-node>
     </ul>
-    <span v-if="errorTree" class="m-tree__error">
+    <div v-if="errorTree" class="m-tree__error" >
         <m-icon name="m-svg__error-filled"></m-icon>
-        {{ errorTreeTxt }}
-    </span>
+        <span ref="error-tree-txt">{{ errorTreeTxt }}</span>
+    </div>
 </div>
