MODUL-286 - Update accordion component

--- a/src/components/accordion/accordion.sandbox.html
+++ b/src/components/accordion/accordion.sandbox.html
@@ -108,4 +108,29 @@
             Accordion content
         </div>
     </m-accordion>
+
+    <h2>Skin default</h2>
+    <m-accordion class="m-u--margin-top" skin="default">
+        <h3 class="m-u--no-margin" slot="header">Skin default</h3>
+        <p>Accordion content</p>
+    </m-accordion>
+
+    <h2>Skin dark</h2>
+    <m-accordion class="m-u--margin-top" skin="dark">
+        <h3 class="m-u--no-margin" slot="header">Skin dark</h3>
+        <p>Accordion content</p>
+    </m-accordion>
+
+    <h2>Skin light</h2>
+    <m-accordion class="m-u--margin-top" skin="light">
+        <h3 class="m-u--no-margin" slot="header">Skin light</h3>
+        <p>Accordion content</p>
+    </m-accordion>
+
+
+    <h2>Skin plain</h2>
+    <m-accordion class="m-u--margin-top" skin="plain">
+        <h3 class="m-u--no-margin" slot="header">Skin plain</h3>
+        <p>Accordion content</p>
+    </m-accordion>
 </div>
