--- a/src/components/accordion/accordion.html
+++ b/src/components/accordion/accordion.html
@@ -1,8 +1,8 @@
 <article class="m-accordion"
          :class="['m--is-' + propSkin,
-            {'m--is-closed': !propOpen,
-            'm--is-open': propOpen,
-            'm--is-disabled': propDisabled,
+            {'m--is-closed': !isOpen,
+            'm--is-open': isOpen,
+            'm--is-disabled': isDisabled,
             'm--has-icon-left': iconPosition !== 'right',
             'm--has-icon-large': iconSize=='large' }]">
     <div class="m-accordion__header"
@@ -10,27 +10,29 @@
          tabindex="0"
          :id="propId"
          role="tab"
-         :aria-expanded="propOpen"
+         :aria-expanded="isOpen"
          :aria-controls="propId + '-controls'"
          @keyup.self.enter="toggleAccordion"
          @click.prevent="toggleAccordion"
          ref="accordionHeader">
         <div class="m-accordion__header__content">
             <slot name="header"></slot>
-            <m-i18n k="m-accordion:open" class="m-accordion__hidden" v-if="!propOpen"></m-i18n>
-            <m-i18n k="m-accordion:close" class="m-accordion__hidden" v-if="propOpen"></m-i18n>
+            <m-i18n k="m-accordion:open" class="m-accordion__hidden" v-if="!isOpen"></m-i18n>
+            <m-i18n k="m-accordion:close" class="m-accordion__hidden" v-if="isOpen"></m-i18n>
         </div>
-        <span aria-hidden="true" class="m-accordion__header-icon" :class="{ 'm--is-closed': propOpen,
-                        'm--is-left': iconPosition !== 'right',
-                        'm--is-large': iconSize=='large',
-                        'm--has-border': propIconBorder }"></span>
+        <m-plus class="m-accordion__header-icon"
+                :class="{ 'm--is-left': iconPosition !== 'right' }"
+                :open="isOpen"
+                :large="iconSize=='large'"
+                :border="hasIconBorder"
+                aria-hidden="true"></m-plus>
     </div>
     <m-accordion-transition :height-delta="skin === 'default' || skin === 'dark' ? 24 : 0">
         <div class="m-accordion__body-wrap"
              role="tabpanel"
              :id="propId + '-controls'"
              :aria-labelledby="propId"
-             v-if="propOpen">
+             v-if="isOpen">
             <div class="m-accordion__body" :class="{ 'm--has-padding': paddingBody && padding }">
                 <slot></slot>
             </div>
