--- a/src/components/tree/tree.sandbox.html
+++ b/src/components/tree/tree.sandbox.html
@@ -1,25 +1,48 @@
 <div>
+    <h2>Default tree</h2>
     <div style="width: 50%; float:left;">
-        <h2>Default tree</h2>
-        <p><m-tree :tree="textTree" :isAllOpen="true"></m-tree></p>
+        <h2>No selection</h2>
+        <p><m-tree :tree="tree" :isAllOpen="true"></m-tree></p>
     </div>
 
     <div style="width: 50%; float:left;">
-        <h2>Empty tree</h2>
-       <p><m-tree :tree="emptyTree" @selectNewFile="selectNewFile" selection="0"></m-tree></p>
+        <h2>Single node selection</h2>
+        <p><m-tree :tree="tree" :isAllOpen="true" selectionNumber="1" :externalSelectedNode="currentFile2" @newNodeSelected="newNodeSelected()"></m-tree></p>
     </div>
 
     <div style="clear: both;"></div>
 
     <h2>File tree</h2>
     <div style="width: 50%; float:left;">
-        <h3>Single file selection</h3>
-        <p><m-tree :tree="fileTree" selectionNumber="1" :externalSelectedNode="currentFile" :isFileTree="true" :isAllOpen="false"></m-tree></p>
+        <h3>No file selection</h3>
+        <p><m-tree :tree="fileTree" :isFileTree="true"></m-tree></p>
     </div>
 
     <div style="width: 50%; float:left;">
-        <h3>No file selection</h3>
-        <p><m-tree :tree="fileTree" :externalSelectedFile="secondCurrentFile" @selectNewFile="selectNewFile" :isFileTree="true"></m-tree></p>
+        <h3>Single file selection</h3>
+        <p><m-tree :tree="fileTree" selectionNumber="1" :externalSelectedNode="currentFile" :isFileTree="true" :isAllOpen="false" @newNodeSelected="newNodeSelected()"></m-tree></p>
+    </div>
+
+    <div style="clear: both;"></div>
+
+    <h2>Other cases</h2>
+
+    <div style="width: 50%; float:left;">
+        <h3>Nodes error</h3>
+        <p><m-tree :tree="errorTree" :isFileTree="true"></m-tree></p>
+    </div>
+
+    <div style="width: 50%; float:left;">
+        <h3>Empty tree</h3>
+        <p><m-tree :tree="emptyTree"></m-tree></p>
+    </div>
+
+    <div style="clear: both;"></div>
+
+    <div style="width: 50%; float:left;">
+        <h3>Selected node not found</h3>
+        <span>Console error</span>
+        <p><m-tree :tree="tree" :externalSelectedNode="wrongCurrentFile" selectionNumber="1"></m-tree></p>
     </div>
 
 </div>
