--- a/src/components/tree/tree.html
+++ b/src/components/tree/tree.html
@@ -1,9 +1,11 @@
 <div class="m-tree">
     <span v-if="isTreeEmpty()" class="m-tree__empty" ref="empty-tree-txt">{{ emptyTreeTxt }}</span>
-    <ul v-else>
+    <template v-else>
         <m-button ref="button-toggle-visibility" skin="secondary" @click="toggleAllVisibility()">{{ treeVisibilityTxt }}</m-button>
-        <m-tree-node v-for="node in tree" ref="tree-node" :selection-number="selectionNumber" :node="node" :external-selected-node="selectedNode" :is-all-open="isAllOpen" :selection-icon="selectionIcon" :is-file-tree="isFileTree" @newNodeSelectected="selectNewNode" @generateErrorTree="generateErrorTree" @selectedNodeFound="selectedNodeFound"></m-tree-node>
-    </ul>
+        <ul>
+            <m-tree-node ref="tree-node" v-for="node in tree" :selection-quantity="selectionQuantity" :node="node" :external-selected-node="selectedNode" :is-all-open="isAllOpen" :selection-icon="selectionIcon" :is-file-tree="isFileTree" @newNodeSelectected="selectNewNode" @generateErrorTree="generateErrorTree" @selectedNodeFound="selectedNodeFound"></m-tree-node>
+        </ul>
+    </template>
     <div v-if="errorTree" class="m-tree__error" >
         <m-icon name="m-svg__error-filled"></m-icon>
         <span ref="error-tree-txt">{{ errorTreeTxt }}</span>
