--- a/src/components/tree-node/tree-node.scss
+++ b/src/components/tree-node/tree-node.scss
@@ -6,7 +6,7 @@ $m-tree-node--icon-border-width: 1px;
 $m-accordion--icon-plus-width: 10px;
 $m-accordion--icon-minus-width: 1px;
 
-.m-tree {
+.m-tree-node {
     color: $m-color--text;
 
     &__single-node {
