MODUL-293 - update disabled prop in input-style

--- a/src/components/input-style/input-style.html
+++ b/src/components/input-style/input-style.html
@@ -8,7 +8,7 @@
               'm--is-valid' : isValid,
               'm--has-label': hasLabel,
               'm--has-value': hasValue,
-              'm--is-anim-active': animActive },
+              'm--is-anim-ready': isAnimReady },
               'm--is-tag-' + tagStyle]"
     @click="onClick"
     @mousedown="onMousedown"
