--- a/src/components/file-tree/file-tree.html
+++ b/src/components/file-tree/file-tree.html
@@ -1,2 +1,2 @@
-<m-icon v-if="isAFolder" size="20px" :name="folderIcon"></m-icon>
+<m-icon v-if="folder" size="20px" :name="folderIcon"></m-icon>
 <m-icon-file v-else :extension="extensionFile"></m-icon-file>
