--- a/src/components/tree/tree.html
+++ b/src/components/tree/tree.html
@@ -1,9 +1,9 @@
 <div class="m-tree">
-    <span v-if="isTreeEmpty()" class="m-tree__empty" ref="empty-tree-txt">{{ emptyTreeTxt }}</span>
+    <span v-if="treeEmpty()" class="m-tree__empty" ref="empty-tree-txt">{{ emptyTreeTxt }}</span>
     <template v-else>
         <m-button ref="button-toggle-visibility" skin="secondary" @click="toggleAllVisibility()">{{ treeVisibilityTxt }}</m-button>
         <ul>
-            <m-tree-node ref="tree-node" v-for="node in tree" :selection-quantity="selectionQuantity" :node="node" :external-selected-node="selectedNode" :is-all-open="isAllOpen" :selection-icon="selectionIcon" :is-file-tree="isFileTree" @newNodeSelectected="selectNewNode" @generateErrorTree="generateErrorTree" @selectedNodeFound="selectedNodeFound"></m-tree-node>
+            <m-tree-node ref="tree-node" v-for="node in tree" :selection-quantity="selectionQuantity" :node="node" :selected-node="propSelectedNode" :all-open="propAllOpen" :selection-icon="selectionIcon" :file-tree="fileTree" @newNodeSelectected="selectNewNode" @generateErrorTree="generateErrorTree" @selectedNodeFound="selectedNodeFound"></m-tree-node>
         </ul>
     </template>
     <div v-if="errorTree" class="m-tree__error" >
