--- a/src/components/tree/tree.sandbox.html
+++ b/src/components/tree/tree.sandbox.html
@@ -7,7 +7,7 @@
 
     <div style="width: 50%; float:left;">
         <h2>Single node selection</h2>
-        <p><m-tree :tree="tree" :isAllOpen="true" selectionQuantity="1" :externalSelectedNode="currentFile2" @newNodeSelected="newNodeSelected()"></m-tree></p>
+        <p><m-tree :tree="tree" :isAllOpen="true" selectionQuantity="1" :selectedNode="currentFile2" @newNodeSelected="newNodeSelected()"></m-tree></p>
     </div>
 
     <div style="clear: both;"></div>
@@ -15,12 +15,12 @@
     <h2>File tree</h2>
     <div style="width: 50%; float:left;">
         <h3>No file selection</h3>
-        <p><m-tree :tree="fileTree" :isFileTree="true"></m-tree></p>
+        <p><m-tree :tree="fileTree" :fileTree="true"></m-tree></p>
     </div>
 
     <div style="width: 50%; float:left;">
         <h3>Single file selection</h3>
-        <p><m-tree :tree="fileTree" selectionQuantity="1" :externalSelectedNode="currentFile" :isFileTree="true" :isAllOpen="false" @newNodeSelected="newNodeSelected()"></m-tree></p>
+        <p><m-tree :tree="fileTree" selectionQuantity="1" :selectedNode="currentFile" :fileTree="true" :isAllOpen="false" @newNodeSelected="newNodeSelected()"></m-tree></p>
     </div>
 
     <div style="clear: both;"></div>
@@ -29,7 +29,7 @@
 
     <div style="width: 50%; float:left;">
         <h3>Nodes error</h3>
-        <p><m-tree :tree="errorTree" :isFileTree="true"></m-tree></p>
+        <p><m-tree :tree="errorTree" :fileTree="true"></m-tree></p>
     </div>
 
     <div style="width: 50%; float:left;">
@@ -42,7 +42,7 @@
     <div style="width: 50%; float:left;">
         <h3>Selected node not found</h3>
         <span>Console error</span>
-        <p><m-tree :tree="tree" :externalSelectedNode="wrongCurrentFile" selectionQuantity="1"></m-tree></p>
+        <p><m-tree :tree="tree" :selectedNode="wrongCurrentFile" selectionQuantity="1"></m-tree></p>
     </div>
 
 </div>
