fix flickering issue for good adjust cursors style in the editor fix toolbar sticky

--- a/src/components/rich-text-edit/adapter/vue-froala.html
+++ b/src/components/rich-text-edit/adapter/vue-froala.html
@@ -2,6 +2,7 @@
     @click.stop
     :class="{
         'vue-froala--focused': isFocused,
+        'vue-froala--unfocused': !isFocused,
         'vue-froala--collapsed': collapsed,
         'vue-froala--animated': isAnimated
     }">
