--- a/src/components/rich-text-edit/adapter/vue-froala.scss
+++ b/src/components/rich-text-edit/adapter/vue-froala.scss
@@ -19,6 +19,18 @@
         border-right: 1px solid $m-color--grey-light;
         border-top: 1px solid $m-color--grey-light;
         border-bottom: 1px solid $m-color--grey-light;
+
+        .popup-button::after {
+            position: absolute;
+            width: 0;
+            height: 0;
+            border-left: 4px solid transparent;
+            border-right: 4px solid transparent;
+            border-top: 4px solid #222;
+            right: 0;
+            top: 17px;
+            content: "";
+        }
     }
 
     /deep/ .fr-box.fr-basic .fr-element {
