fix all cursor issues fix disabled / waiuting styles

--- a/src/components/input-style/input-style.scss
+++ b/src/components/input-style/input-style.scss
@@ -246,7 +246,7 @@ $m-input-style--padding: 4px !default;
         &,
         div,
         span {
-            cursor: pointer;
+            cursor: text;
         }
 
         &__left {
