corrected "border bottom changes color on click while waiting" bug

--- a/src/components/rich-text/rich-text.sandbox.html
+++ b/src/components/rich-text/rich-text.sandbox.html
@@ -32,7 +32,7 @@
                 :helper-message="helperMessage"
                 :waiting="waiting"
                 :disabled="disabled"></m-rich-text-edit>
-            <m-textfield label="'test123123'"></m-textfield>
+            <m-textfield label="'test123123'" :waiting="waiting" :disabled="disabled"></m-textfield>
             <div><m-rich-text :value="model"></m-rich-text></div>
         </div>
     </p>
