--- a/src/components/input-style/input-style.scss
+++ b/src/components/input-style/input-style.scss
@@ -40,7 +40,7 @@ $m-input-style--padding: 4px !default;
 
     &:hover:not(.m--is-disabled):not(.m--is-waiting):not(.m--has-error):not(.m--is-valid):not(.m--is-focus),
     &.m--has-value {
-        &:not(.m--is-readonly):not(.m--has-error)::before {
+        &:not(.m--is-readonly):not(.m--has-error):not(.m--is-waiting)::before {
             border-color: $m-color--text;
         }
     }
